<resources>
    <string name="app_name">Погодовое</string>
    <string name="someText">Какой-то текст</string>
    <string name="temperature_label">Температура</string>
    <string name="feels_like_label">Ощущается как</string>
    <string name="city_coordinates">lt/ln: %s, %s"</string>
    <string name="error">Не удалось загрузить данные</string>
    <string name="reload">Перезагрузить</string>
    <string name="flag">Флаг</string>
    <string name="some_part_name">День</string>
    <string name="someTemp">20°</string>
    <string name="someWindSpeed">5м/с</string>
    <string name="someHumidity">50%</string>
    <string name="longTextString">Облачно с прояснениями</string>
    <string name="clear">Ясно</string>
    <string name="partly_cloudy">Малооблачно</string>
    <string name="cloudy">Облачно с прояснениями</string>
    <string name="overcast">Пасмурно</string>
    <string name="drizzle">Морось</string>
    <string name="light_rain">Небольшой дождь</string>
    <string name="rain">Дождь</string>
    <string name="moderate_rain">Умеренно сильный дождь</string>
    <string name="heavy_rain">Сильный дождь</string>
    <string name="continuous_heavy_rain">Длительный сильный дождь</string>
    <string name="showers">Ливень</string>
    <string name="wet_snow">Дождь со снегом</string>
    <string name="light_snow">Небольшой снег</string>
    <string name="snow">Снег</string>
    <string name="snow_showers">Снегопад</string>
    <string name="hail">Град</string>
    <string name="thunderstorm">Гроза</string>
    <string name="thunderstorm_with_rain">Дождь с грозой</string>
    <string name="thunderstorm_with_hail">Гроза с градом</string>
    <string name="night">Ночь</string>
    <string name="morning">Утро</string>
    <string name="day">День</string>
    <string name="evening">Вечер</string>
    <string name="sunny">Солнечно</string>
    <string name="someCityName">Москва</string>
    <string name="mps">м\\с</string>
    <string name="mm">мм</string>
    <string name="errorLoadingFromServer">Ошибка при загрузке данных с сервера</string>
    <string name="someDate">01.01.21 00:00</string>
    <string name="option_history">История</string>
    <string name="option_provider">Content Provider</string>
    <string name="filter">Filter</string>
    <string name="location">Location</string>

    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_title_gps_turned_off">GPS отключён</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно. Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известная локация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_message">Необъодим доступ к данным GPS, чтобы предоставить погоду по Вашему текущему адресу</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Отказать</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите узнать погоду в текущем местоположении</string>
    <string name="dialog_address_get_weather">Узнать погоду</string>


</resources>