<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_sunny">

        <ImageView
            android:id="@+id/weatherConditionIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="25dp"
            android:contentDescription="@string/sunny"
            android:src="@drawable/sunny"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/condition" />

        <TextView
            android:id="@+id/cityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Москва" />

        <TextView
            android:id="@+id/cityCoordinates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityName"
            tools:text="lt/ln: 55.755826, 37.617299900000035" />

        <TextView
            android:id="@+id/temperatureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/temperature_label"
            app:layout_constraintBottom_toTopOf="@+id/temperatureValue"
            app:layout_constraintEnd_toStartOf="@+id/weatherConditionIcon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/weatherConditionIcon" />

        <TextView
            android:id="@+id/temperatureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:textSize="@dimen/feels_like_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/weatherConditionIcon"
            app:layout_constraintEnd_toEndOf="@+id/temperatureLabel"
            app:layout_constraintStart_toStartOf="@+id/temperatureLabel"
            app:layout_constraintTop_toBottomOf="@+id/temperatureLabel"
            tools:text="+15" />

        <!--        <TextView-->
        <!--            android:id="@+id/degree"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:textSize="@dimen/feels_like_text_size"-->
        <!--            android:textStyle="bold"-->
        <!--            app:layout_constraintBottom_toBottomOf="@+id/temperatureValue"-->
        <!--            app:layout_constraintStart_toEndOf="@+id/temperatureValue"-->
        <!--            app:layout_constraintTop_toTopOf="@+id/temperatureValue"-->
        <!--            tools:text="°" />-->

        <TextView
            android:id="@+id/feelsLikeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feels_like_label"
            app:layout_constraintBottom_toTopOf="@+id/feelsLikeValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/weatherConditionIcon"
            app:layout_constraintTop_toTopOf="@+id/weatherConditionIcon" />

        <TextView
            android:id="@+id/feelsLikeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="71dp"
            android:textSize="@dimen/feels_like_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/weatherConditionIcon"
            app:layout_constraintEnd_toEndOf="@+id/feelsLikeLabel"
            app:layout_constraintStart_toStartOf="@+id/feelsLikeLabel"
            app:layout_constraintTop_toBottomOf="@+id/feelsLikeLabel"
            tools:text="-23" />

        <TextView
            android:id="@+id/condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityCoordinates"
            tools:text="Ясно" />

        <ImageView
            android:id="@+id/humidityIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/sunny"
            android:src="@drawable/drop"
            app:layout_constraintBottom_toBottomOf="@+id/windSpeed"
            app:layout_constraintEnd_toStartOf="@+id/humidity"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/windSpeed"
            app:layout_constraintTop_toTopOf="@+id/windSpeed" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/humidityIcon"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/humidityIcon"
            app:layout_constraintTop_toTopOf="@+id/humidityIcon"
            tools:text="54%" />

        <ImageView
            android:id="@+id/windSpeedIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/sunny"
            android:src="@drawable/wind"
            app:layout_constraintBottom_toBottomOf="@+id/windSpeed"
            app:layout_constraintEnd_toStartOf="@+id/windSpeed"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/windSpeed" />

        <TextView
            android:id="@+id/windSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/humidityIcon"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/windSpeedIcon"
            app:layout_constraintTop_toBottomOf="@+id/weatherConditionIcon"
            tools:text="5м/с" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="114dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="297dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/black"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</FrameLayout>